WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56541
REGRESSION (
r81084
): media/invalid-media-url-crash.html and editing/execCommand/indent-paragraphs.html failing on WebKit2
https://bugs.webkit.org/show_bug.cgi?id=56541
Summary
REGRESSION (r81084): media/invalid-media-url-crash.html and editing/execComma...
Adam Roben (:aroben)
Reported
2011-03-16 23:07:55 PDT
media/invalid-media-url-crash.html and editing/execCommand/indent-paragraphs.html are failing on WebKit2. webkit-patch failure-reason says
r81084
is to blame.
Attachments
Patch
(1.76 KB, patch)
2011-03-16 23:13 PDT
,
Sam Weinig
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-03-16 23:13:50 PDT
Created
attachment 86032
[details]
Patch
Sam Weinig
Comment 2
2011-03-16 23:14:39 PDT
Committed
r81327
: <
http://trac.webkit.org/changeset/81327
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug